[package]
name = "quoted"
description = "A simple CLI program to print a random quote from a JSON list."
version = "0.1.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "quoted"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
